...
                Section(header: Text(Localization.labels.titleForm)) {
                    TextField(Localization.labels.titleFormTooltip, text: $todoFormData.title)
                        .onChange(of: todoFormData.title) {
                            validateTitle(todoFormData.title)
                        }
                        .background(showErrorTitle ? Color.theme.red.opacity(0.2) : nil)
                        .accessibilityIdentifier("TodoFormTitleTextField")
                    if showErrorTitle {
                        Text(errorMessageTitle)
                            .foregroundColor(Color.theme.red)
                            .font(Font.app.small)
                    }
                }
...
                }
                .sectionSytle()
                
                if (categoriesViewModel.hasCategories()) {
                    Section(header: Text(Localization.labels.category)) {
                        CategoryPickerView(selectedCategory: $todoFormData.category)
                            .accessibilityIdentifier("TodoFormCategoryPicker")
                    }
                    .sectionSytle()
                }
                
                Section(header: Text(Localization.labels.dueDate)) {
                    DatePicker(Localization.labels.dueDateTooltip, selection: $todoFormData.dueDate, displayedComponents: .date)
...
                    }
                    presentationMode.wrappedValue.dismiss()
                } label: {
                    Label(existingTodo == nil ? Localization.labels.saveAddTodo : Localization.labels.saveEditTodo, systemImage: "none")
                        .frame(maxWidth: .infinity)
                        .bold()
                        .accessibilityLabel("TodoFormSaveButton")
                }
                .buttonStyle()
                .disabled(todoFormData.title.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty || showErrorTitle || showErrorDetails )
                    
            }
            .appTheme()
...
